<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="buttonTrue">True</string>
    <string name="buttonFalse">False</string>
    <string name="question_intro">Do you come from a land Down Under?!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_africa">The Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon river is the largest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s largest ocean.</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="previous">Prev</string>
    <string name="get_answer">Get Answer</string>
    <string name="are_you_sure_you_want_to_do_this">Are you sure you want to do this?</string>
    <string name="cheat">Cheat!</string>
</resources>
