<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_intro"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/questionString"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonTrue"
            android:text="@string/buttonTrue"
            android:background="@color/colorAccent"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonFalse"
            android:text="@string/buttonFalse"
            android:background="@color/colorAccent"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPrev"
            android:text="@string/previous"
            android:drawableStart="@drawable/arrow_left"
            android:drawablePadding="4dp"
            android:background="@color/colorAccent"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCheat"
            android:text="@string/cheat"
            android:background="@color/colorAccent"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNext"
            android:text="@string/next"
            android:drawableEnd="@drawable/arrow_right"
            android:drawablePadding="4dp"
            android:background="@color/colorAccent"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>